Updates from Overleaf

--- a/Dawson-part1.tex
+++ b/Dawson-part1.tex
@@ -1,10 +1,10 @@
-\documentclass[preprint,12pt,authoryear]{elsarticle}
-\input{instr-preamble}
-\input{instr-mathsymbols}
-\journal{ME517---Mechanics of Soft Materials}
-\setlength{\marginparwidth}{2cm}
-\newcommand\C[1]\null %\C{for inline comments}
-\begin{document}
+% \documentclass[preprint,12pt,authoryear]{elsarticle}
+% \input{instr-preamble}
+% \input{instr-mathsymbols}
+% \journal{ME517---Mechanics of Soft Materials}
+% \setlength{\marginparwidth}{2cm}
+% \newcommand\C[1]\null %\C{for inline comments}
+% \begin{document}
 
 % \include{instr-part1}
 \section{Statement of Research Interest}
@@ -69,7 +69,7 @@ Okenve-Ramos, Pilar, Rory Gosling, Monika Chojnowska-Monga, et al. “Neuronal A
 
 \include{Dawson-PS1}
 
-\end{document}
+% \end{document}
 
 % Section 1 Notes
 % by which the VE properties of MTs are established microtubules vary in exhibiting these properties
